# gen/resource/views/view.go
@@ -84,7 +84,6 @@ var (
 			"tags",
 			"rating",
 			"last_updated_at",
-			"versions",
 		},
 		"extended": []string{
 			"id",
@@ -97,6 +96,7 @@ var (
 			"tags",
 			"rating",
 			"last_updated_at",
+			"versions",
 		},
 	}
 )
@@ -148,9 +148,6 @@ func ValidateResourceView(result *ResourceView) (err error) {
 	if result.LastUpdatedAt == nil {
 		err = goa.MergeErrors(err, goa.MissingFieldError("last_updated_at", "result"))
 	}
-	if result.Versions == nil {
-		err = goa.MergeErrors(err, goa.MissingFieldError("versions", "result"))
-	}
 	if result.Catalog != nil {
 		if err2 := ValidateCatalogView(result.Catalog); err2 != nil {
 			err = goa.MergeErrors(err, err2)
@@ -159,13 +156,6 @@ func ValidateResourceView(result *ResourceView) (err error) {
 	for _, e := range result.Tags {
 		if e != nil {
 			if err2 := ValidateTagView(e); err2 != nil {
-				err = goa.MergeErrors(err, err2)
-			}
-		}
-	}
-	for _, e := range result.Versions {
-		if e != nil {
-			if err2 := ValidateVersionsView(e); err2 != nil {
 				err = goa.MergeErrors(err, err2)
 			}
 		}
@@ -214,6 +204,13 @@ func ValidateResourceViewExtended(result *ResourceView) (err error) {
 	for _, e := range result.Tags {
 		if e != nil {
 			if err2 := ValidateTagView(e); err2 != nil {
+				err = goa.MergeErrors(err, err2)
+			}
+		}
+	}
+	for _, e := range result.Versions {
+		if e != nil {
+			if err2 := ValidateVersionsView(e); err2 != nil {
 				err = goa.MergeErrors(err, err2)
 			}
 		}
